feat: Add Team examples for new users

--- a/Pages/Acromo.razor
+++ b/Pages/Acromo.razor
@@ -45,6 +45,15 @@
             </li>
         </ul>
         
+        <h3>Try It Out - Example Teams</h3>
+        <p>New to competitive Pokemon? Try these example teams to see the tool in action:</p>
+        <ul>
+            <li><a href="https://pokepast.es/883fb962498fc5a6" target="_blank">https://pokepast.es/883fb962498fc5a6</a></li>
+            <li><a href="https://pokepast.es/397acdb4ce077e1b" target="_blank">https://pokepast.es/397acdb4ce077e1b</a></li>
+            <li><a href="https://pokepast.es/06fa386ec78daa39" target="_blank">https://pokepast.es/06fa386ec78daa39</a></li>
+        </ul>
+        <p><em>Copy any URL above and paste it in the "Import from Pokepaste" field, then click Fetch!</em></p>
+        
         <h3>Data Sources</h3>
         <ul>
             <li><strong>PokeAPI:</strong> Pokemon sprites, types, and move data</li>
